# python-learning

./: .gitignore  README.md
document/: python-fastapi-learning-plan.md
progress/20260526/my-api/: exception-handler.py  main.py  pyproject.toml
progress/mvp-project/finance-tracker/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  seed.py
progress/mvp-project/finance-tracker/5w1h/: alembic.ini.md
progress/mvp-project/finance-tracker/alembic/: env.py
progress/mvp-project/finance-tracker/alembic/versions/: 0e402f9da6d8_init_categories_and_transactions.py
progress/mvp-project/finance-tracker/app/: main.py
progress/mvp-project/finance-tracker/app/core/: config.py  database.py  exceptions.py
progress/mvp-project/finance-tracker/app/models/: __init__.py  category.py  transaction.py
progress/mvp-project/finance-tracker/app/repositories/: __init__.py  category_repo.py  report_repo.py  transaction_repo.py
progress/mvp-project/finance-tracker/app/routers/: __init__.py  categories.py  reports.py  transactions.py
progress/mvp-project/finance-tracker/app/schemas/: __init__.py  category.py  report.py  transaction.py
progress/mvp-project/finance-tracker/frontend-plan/: 00-tong-quan.md  01-khoi-tao-va-cau-truc.md  02-layout-routing.md  03-ket-noi-api.md  04-categories-crud.md  05-transactions-crud.md  06-state-pinia.md  07-reports-dashboard.md  08-hoan-thien-deploy.md  README.md
progress/mvp-project/finance-tracker/hoi-de-hieu/: doc-code-xmind.md  index.md
report-daily/: 20260514.md  20260515.md  20260516.md  20260518.md  20260519.md  (+5 more)
(+60 files in other folders)
